# SGEXTN

./: .autocomplete.h  .clang-tidy  .clangd  .kateproject  .neocmake.toml  CMakeLists.txt  LICENSE.txt  README.md  SGEXTN.geany  SGEXTN.pro  apptemplate.pro  assets.qrc  changelog.sg  compilecommands.txt  dlldebug.txt  dllrelease.txt  dllsgridebug.txt  dllsgrirelease.txt  main.cpp  sgcentralmanagement.cpp  sgcentralmanagement.h  sggenerallibrary.cpp  sggenerallibrary.h  sgsignalsemitter.cpp  sgsignalsemitter.h  sgstatusbarmanagement.cpp  sgstatusbarmanagement.h  something.md  template_license.txt
.github/workflows/: BuildLah.yaml  build.yaml  linux.yaml  linux_gcc_full.yaml  macos_clang_full.yaml  ownself_build.yaml  windows.yaml  windows_llvm_mingw_full.yaml  windows_mingw_full.yaml  windows_msvc_full.yaml
ApplicationBase/include/: SGEXTN_ApplicationBase_Char.h  SGEXTN_ApplicationBase_Character.h  SGEXTN_ApplicationBase_Debug.h  SGEXTN_ApplicationBase_InitSetup.h  SGEXTN_ApplicationBase_OldChar.h  SGEXTN_ApplicationBase_OldString.h  SGEXTN_ApplicationBase_Random.h  SGEXTN_ApplicationBase_RegistryEntry.h  SGEXTN_ApplicationBase_String.h  SGEXTN_ApplicationBase_Timer.h  SGEXTN_ApplicationBase_UnicodeQuery.h
ApplicationBase/misc/: unicodecategory.h  unicodecompositionexclusion.txt  unicodedecomp.h  unicodeemoji.h  unicodeemoji.txt  unicodeindicgrapheme.h  unicodeindicgrapheme.txt  unicodemarkorder.h  unicodenumbers.h  unicodeparser.h  unicoderecompose.h
ApplicationBase/src/: SGEXTN_ApplicationBase_ByteVector.cpp  SGEXTN_ApplicationBase_Char.cpp  SGEXTN_ApplicationBase_Character.cpp  SGEXTN_ApplicationBase_Debug.cpp  SGEXTN_ApplicationBase_InitSetup.cpp  SGEXTN_ApplicationBase_OldChar.cpp  SGEXTN_ApplicationBase_OldString.cpp  SGEXTN_ApplicationBase_QObjTimerInterface.cpp  SGEXTN_ApplicationBase_Random.cpp  SGEXTN_ApplicationBase_RegistryEntry.cpp  SGEXTN_ApplicationBase_String.cpp  SGEXTN_ApplicationBase_TextBuffer.cpp  SGEXTN_ApplicationBase_Timer.cpp  SGEXTN_ApplicationBase_UnicodeQuery.cpp  SGEXTN_ApplicationBase_UnitTests.cpp
Containers/include/: SGEXTN_Containers_Array.h  SGEXTN_Containers_ArrayVectorMove.h  SGEXTN_Containers_Deque.h  SGEXTN_Containers_EqualTo.h  SGEXTN_Containers_ForceCrash.h  SGEXTN_Containers_Hash.h  SGEXTN_Containers_HashAlgorithm.h  SGEXTN_Containers_LessThan.h  SGEXTN_Containers_Map.h  SGEXTN_Containers_MoreThan.h  SGEXTN_Containers_MultiMap.h  SGEXTN_Containers_MultiSet.h  SGEXTN_Containers_Pair.h  SGEXTN_Containers_PlacementNew.h  SGEXTN_Containers_PriorityQueue.h  SGEXTN_Containers_Queue.h  SGEXTN_Containers_Set.h  SGEXTN_Containers_Sort.h  SGEXTN_Containers_Span.h  SGEXTN_Containers_Stack.h  SGEXTN_Containers_Tuple.h  SGEXTN_Containers_Tuple3.h  SGEXTN_Containers_UnorderedMap.h  SGEXTN_Containers_UnorderedMultiMap.h  SGEXTN_Containers_UnorderedSet.h  SGEXTN_Containers_Vector.h
Containers/src/: Hash.cpp  PlacementNew.cpp  SGEXTN_Container_UnitTests.cpp  SGEXTN_Containers_Crash.cpp  SGEXTN_Containers_ForceCrash.cpp  SGEXTN_Containers_Hash.cpp  SGEXTN_Containers_HashAlgorithm.cpp  SGEXTN_Containers_PlacementNew.cpp  SGEXTN_Containers_UnitTests.cpp
CoreText/include/: SGEXTN_CoreText_Character.h  SGEXTN_CoreText_Debug.h  SGEXTN_CoreText_String.h  SGEXTN_CoreText_UnicodeQuery.h
CoreText/src/: Character.cpp  Debug.cpp  SGEXTN_CoreText_ByteVector.cpp  SGEXTN_CoreText_Character.cpp  String.cpp  (+4 more)
Documentation/: .htaccess  classinfo.html  contact.html  footer.sg  footer.txt  gensite.cpp  header.txt  index.html  setup.html  sitemap.xml  style.sg  style.txt
EntryPoint_SG/: SGEXTN_EntryPoint.h
LICENSES/: NOTICE
QML/: icon.qml  iconbutton.qml  inputfield.qml  longinputfield.qml  longtext.qml  parentwidget.qml  root.qml  rootwidget.qml  scrollview.qml  text.qml  textbutton.qml  touchreceiver.qml  vesicles.qml  widget.qml
SGDoc_source/: findreplace.sgdoc
SGEXTN/: SGEXTN.pri  assets.qrc
SingCorrect_commands_list/: arrows.txt  bigoperators.txt  cg.cpp  custom.txt  delimiters.txt  greek.txt  letters.txt  negrelations.txt  operators.txt  relations.txt  sets.txt  symbols.txt
cmake/: BuildLah.cmake  BuildLah_CheckFinalisation.cmake  BuildLah_CheckLicense.cmake  SGEXTNConfig.cmake.in  SingEmbed_asset.cmake  SingEmbed_shader.cmake  buildlah.cmake  template.cmake.in
cutevesicles/: cutevesicles.frag  cutevesicles.frag.qsb  cutevesicles.vert  cutevesicles.vert.qsb  sgxrendercutevesiclesmaterial.cpp  sgxrendercutevesiclesmaterial.h  sgxrendercutevesiclesquickuielement.cpp  sgxrendercutevesiclesquickuielement.h  sgxrendercutevesiclesshader.cpp  sgxrendercutevesiclesshader.h
dll_defines/: SG_DLL.h
fakeqml/: InternalTest.qml  qmldir
misc/: main.cpp  sgxcentral.cpp  sgxcentral.h
primitives/: sgxcolourhsla.cpp  sgxcolourhsla.h  sgxcolourrgba.cpp  sgxcolourrgba.h  sgxidentifier.cpp  sgxidentifier.h  sgxtimestamp.cpp  sgxtimestamp.h  sgxtouchevent.cpp  sgxtouchevent.h  sgxvector2.cpp  sgxvector2.h
private_api/: SG_DLL.h
quickui/: sgxquickresizer.cpp  sgxquickresizer.h  sgxquickuiinterface.cpp  sgxquickuiinterface.h  sgxthemecoloursetting.cpp  sgxthemecoloursetting.h
userDefinedClasses/: sgucentralmanagement.cpp  sgucentralmanagement.h  sgusignalemitter.cpp  sgusignalemitter.h
vesicles/: sgxvesiclesmaterial.cpp  sgxvesiclesmaterial.h  sgxvesiclesquickuielement.cpp  sgxvesiclesquickuielement.h  sgxvesiclesshader.cpp  sgxvesiclesshader.h  vesicles.frag  vesicles.frag.qsb  vesicles.vert  vesicles.vert.qsb
widgets/: sgxicon.cpp  sgxicon.h  sgxiconbutton.cpp  sgxiconbutton.h  sgxinputfield.cpp  sgxinputfield.h  sgxlayout.cpp  sgxlayout.h  sgxlonginputfield.cpp  sgxlonginputfield.h  sgxlonginputfieldinternal.cpp  sgxlonginputfieldinternal.h  sgxlongtext.cpp  sgxlongtext.h  sgxlongtextinternal.cpp  sgxlongtextinternal.h  sgxparentwidget.cpp  sgxparentwidget.h  sgxrootwidget.cpp  sgxrootwidget.h  sgxscrollbar.cpp  sgxscrollbar.h  sgxscrollview.cpp  sgxscrollview.h  sgxstandardinputfield.cpp  sgxstandardinputfield.h  sgxtext.cpp  sgxtext.h  sgxtextbutton.cpp  sgxtextbutton.h  sgxtouchreceiver.cpp  sgxtouchreceiver.h  sgxwidget.cpp  sgxwidget.h
(+1415 files in other folders)
